[gd_scene load_steps=20 format=3 uid="uid://dbif1sjlyi52h"]

[ext_resource type="Script" path="res://Entity/Player/player.gd" id="1_k1fa2"]
[ext_resource type="PackedScene" uid="uid://og7a242cf7hw" path="res://Entity/Player/Model/Drone.gltf" id="2_gkfu0"]
[ext_resource type="PackedScene" uid="uid://tbrl7caum8kg" path="res://Entity/Tools/hurtbox.tscn" id="2_tgjul"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_faw1g"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.25098)

[sub_resource type="TorusMesh" id="TorusMesh_v6oou"]
material = SubResource("StandardMaterial3D_faw1g")
inner_radius = 1.05
outer_radius = 0.95
rings = 32
ring_segments = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pa4fq"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.501961)

[sub_resource type="SphereMesh" id="SphereMesh_68vjd"]
material = SubResource("StandardMaterial3D_pa4fq")
radius = 0.2
height = 0.4
radial_segments = 4
rings = 1
is_hemisphere = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h7s8p"]
albedo_color = Color(0.901961, 0.356863, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_cefhs"]
material = SubResource("StandardMaterial3D_h7s8p")
radius = 0.2
height = 0.4
radial_segments = 7
rings = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r154n"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.0627451)

[sub_resource type="TorusMesh" id="TorusMesh_284ph"]
material = SubResource("StandardMaterial3D_r154n")
inner_radius = 20.9
outer_radius = 21.0
ring_segments = 4

[sub_resource type="TorusMesh" id="TorusMesh_k5gn1"]
material = SubResource("StandardMaterial3D_r154n")
inner_radius = 12.9
outer_radius = 13.0
ring_segments = 4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p8b3e"]
height = 1.0
radius = 0.3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wuof1"]
height = 1.0
radius = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bct2w"]
height = 1.0
radius = 0.05

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ghcvq"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:username")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:health")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:score")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6vt5a"]
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_o86if"]
material = SubResource("StandardMaterial3D_6vt5a")
size = Vector3(0.05, 0.05, 0.05)

[sub_resource type="Curve" id="Curve_yru4w"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -5.53847, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_k1fa2")

[node name="CameraController" type="Node3D" parent="."]

[node name="CameraTarget" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 30, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController/CameraTarget"]
transform = Transform3D(1, 0, 0, 0, 1, -2.52327e-07, 0, 2.52327e-07, 1, 0, 0, 0)
fov = 90.0
size = 53.983

[node name="blockbench_export" parent="." instance=ExtResource("2_gkfu0")]
transform = Transform3D(-2.62268e-08, 0, 0.6, 0, 0.6, 0, -0.6, 0, -2.62268e-08, 0, -0.605579, 0)

[node name="PlayersUI3D" type="Node3D" parent="."]

[node name="PlayerIndicator" type="MeshInstance3D" parent="PlayersUI3D"]
mesh = SubResource("TorusMesh_v6oou")
skeleton = NodePath("../..")

[node name="DirectionToServer1" type="Node3D" parent="PlayersUI3D"]

[node name="Arrow" type="MeshInstance3D" parent="PlayersUI3D/DirectionToServer1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -3)
mesh = SubResource("SphereMesh_68vjd")
skeleton = NodePath("../../..")

[node name="DirectionToServer2" type="Node3D" parent="PlayersUI3D"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)

[node name="Arrow" type="MeshInstance3D" parent="PlayersUI3D/DirectionToServer2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -3)
mesh = SubResource("SphereMesh_68vjd")
skeleton = NodePath("../../..")

[node name="DirectionToServer3" type="Node3D" parent="PlayersUI3D"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="Arrow" type="MeshInstance3D" parent="PlayersUI3D/DirectionToServer3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -3)
mesh = SubResource("SphereMesh_68vjd")
skeleton = NodePath("../../..")

[node name="HealthBomb1" type="Node3D" parent="PlayersUI3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.5, 0)

[node name="Arrow" type="MeshInstance3D" parent="PlayersUI3D/HealthBomb1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -1)
mesh = SubResource("SphereMesh_cefhs")
skeleton = NodePath("../../..")

[node name="HealthBomb2" type="Node3D" parent="PlayersUI3D"]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 0, 0.5, 0)

[node name="Arrow" type="MeshInstance3D" parent="PlayersUI3D/HealthBomb2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -1)
mesh = SubResource("SphereMesh_cefhs")
skeleton = NodePath("../../..")

[node name="FireRangeIndicator" type="Node3D" parent="PlayersUI3D"]

[node name="FireRange" type="MeshInstance3D" parent="PlayersUI3D/FireRangeIndicator"]
mesh = SubResource("TorusMesh_284ph")
skeleton = NodePath("../../..")

[node name="FireRangeClose" type="MeshInstance3D" parent="PlayersUI3D/FireRangeIndicator"]
mesh = SubResource("TorusMesh_k5gn1")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_p8b3e")

[node name="Attack_Source" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="InitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="AttackCoolDown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hurtbox" parent="." groups=["player_hurtbox"] instance=ExtResource("2_tgjul")]

[node name="CollisionShape3D" parent="Hurtbox" index="0"]
shape = SubResource("CylinderShape3D_wuof1")

[node name="BulletHellHurtbox" parent="." instance=ExtResource("2_tgjul")]

[node name="CollisionShape3D" parent="BulletHellHurtbox" index="0"]
shape = SubResource("CylinderShape3D_bct2w")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ghcvq")

[node name="ShootEffect" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, -0.941781)
emitting = false
amount = 16
lifetime = 0.1
explosiveness = 1.0
mesh = SubResource("BoxMesh_o86if")
direction = Vector3(0, 0, 0)
spread = 25.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_yru4w")

[node name="Audio" type="Node3D" parent="."]

[node name="AudioListener3D" type="AudioListener3D" parent="Audio"]

[connection signal="timeout" from="InitTimer" to="." method="_on_init_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="BulletHellHurtbox" to="." method="_on_bullet_hell_hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="BulletHellHurtbox"]
